--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -61,3 +61,14 @@
     margin-left: auto;
   }
 }
+
+@media (max-width: 720px) {
+  .headerContent {
+    width: 100%;
+    height: 5rem;
+
+    nav {
+      display: none;
+    }
+  }
+}
